[project]
name = "components-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langchain-xai>=0.2.4",
    "langchain[google-genai,groq,openai]>=0.3.25",
    "pymongo>=4.13.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "streamlit-extras>=0.7.1",
]
